--- a/app/src/main/res/layout/activity_ecosys.xml
+++ b/app/src/main/res/layout/activity_ecosys.xml
@@ -5,37 +5,41 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/fondoecosys"
+    android:background="#f0f3f4"
     tools:context=".EcoSysActivity">
 
     <LinearLayout
         android:id="@+id/linearLayout3"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:background="@drawable/background_8"
+        android:layout_height="130dp"
+        android:background="#f0f3f4"
+        android:elevation="10dp"
         android:orientation="vertical"
-        android:paddingBottom="20dp"
+        android:paddingBottom="5dp"
         app:layout_constraintBottom_toTopOf="@+id/scrollView2"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0">
 
         <TextView
             android:id="@+id/titulo"
             android:layout_width="match_parent"
-            android:layout_height="80dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
             android:gravity="center"
             android:paddingTop="10dp"
             android:paddingBottom="10dp"
             android:text="@string/estos_son_tus_ecosistemas"
             android:textAlignment="center"
             android:textAllCaps="false"
-            android:textColor="#FFFFFF"
+            android:textColor="@color/black"
             android:textSize="30sp" />
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="46dp"
             android:layout_gravity="center"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
@@ -51,18 +55,22 @@
                 android:layout_weight="1"
                 android:text=""
                 android:textAlignment="center"
-                android:textColor="#FFFFFF"
+                android:textColor="#000000"
                 android:textSize="20sp" />
 
-
-            <Button
+            <ImageButton
                 android:id="@+id/configureUsernameBtn"
-                android:layout_width="30dp"
+                android:layout_width="49dp"
                 android:layout_height="30dp"
-                android:background="@drawable/ajustes"
-                android:onClick="changeUserName"
-                android:textColor="#000000"
-                android:textStyle="bold" />
+                android:layout_gravity="center_vertical"
+                android:layout_margin="15dp"
+                android:background="#00A02323"
+                android:backgroundTint="#C13333"
+                android:focusableInTouchMode="false"
+                android:scaleType="fitCenter"
+                app:srcCompat="@drawable/engranaje"
+                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
+
 
         </LinearLayout>
 
@@ -71,119 +79,61 @@
 
     <ScrollView
         android:id="@+id/scrollView2"
-        android:layout_width="409dp"
-        android:layout_height="429dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="130dp"
+        android:layout_marginBottom="140dp"
         android:paddingLeft="10dp"
         android:paddingTop="20dp"
         android:paddingRight="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
-            android:id="@+id/linearLayout"
+            android:id="@+id/linearLayoutTerrarios"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/ecosistemas_background"
-            android:gravity="center"
-            android:orientation="vertical">
+            android:orientation="vertical" />
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_gravity="center"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:orientation="horizontal"
-                android:paddingTop="5dp"
-                android:paddingEnd="15dp">
-
-                <TextView
-                    android:id="@+id/ecosysName"
-                    android:layout_width="0dp"
-                    android:layout_height="40dp"
-                    android:layout_weight="1"
-                    android:gravity="center_vertical"
-                    android:paddingLeft="30dp"
-                    android:text="Tortugas"
-                    android:textAllCaps="false"
-                    android:textColor="#FFFFFF"
-                    android:textSize="20dp"
-                    android:textStyle="bold" />
-
-                <Button
-                    android:id="@+id/configureEcosystemNameBtn"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:background="@drawable/ajustes"
-                    android:onClick="changeUserName"
-                    android:textColor="#000000"
-                    android:textStyle="bold" />
-
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal"
-                android:paddingTop="10dp"
-                android:paddingBottom="10dp">
-
-                <Button
-                    android:id="@+id/tortugas"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginStart="20dp"
-                    android:layout_weight="1"
-                    android:background="@drawable/custom_bttn"
-                    android:text="Variables actuales"
-                    android:textAlignment="center"
-                    android:textColor="#000000"
-                    android:textStyle="bold"
-                    app:cornerRadius="10dp" />
-
-                <Button
-                    android:id="@+id/historico"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginEnd="20dp"
-                    android:layout_weight="2"
-                    android:background="@drawable/bttn_blue_background"
-                    android:text="Histórico"
-                    android:textAlignment="center"
-                    android:textColor="#000000"
-                    android:textStyle="bold"
-                    app:cornerRadius="10dp" />
-
-            </LinearLayout>
-
-        </LinearLayout>
     </ScrollView>
 
     <LinearLayout
         android:id="@+id/linearLayout4"
-        android:layout_width="388dp"
-        android:layout_height="50dp"
+        android:layout_width="0dp"
+        android:layout_height="57dp"
+        android:layout_marginBottom="50dp"
         android:gravity="center_horizontal"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.48"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/scrollView2">
+        app:layout_constraintTop_toBottomOf="@+id/scrollView2"
+        app:layout_constraintVertical_bias="1.0">
 
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/logOutButton"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:background="@drawable/custom_button3"
+            android:layout_height="50dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp"
+            android:backgroundTint="#D5D8DC"
             android:text="@string/cerrar_sesion"
             android:textAlignment="center"
-            android:textColor="#FFFFFF"
-            android:textStyle="bold" />
+            android:textColor="@color/black"
+            android:textSize="18dp"
+            app:cornerRadius="18dp"
+            app:icon="?attr/homeAsUpIndicator"
+            app:iconGravity="textStart"
+            app:iconPadding="6dp"
+            app:iconSize="18dp"
+            app:iconTint="#000000"
+            app:strokeColor="@color/black"
+            app:strokeWidth="1dp" />
 
 
     </LinearLayout>
