--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,8 +1,10 @@
+<!--
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme.
-    <style name="Base.Theme.EcoMonitor" parent="Theme.Material3.DayNight.NoActionBar"> -->
     <style name="Base.Theme.EcoMonitor" parent="Theme.AppCompat.Light.NoActionBar">
-        <!-- Customize your dark theme here. -->
-        <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
+    </style>
+</resources>
+-->
+<resources xmlns:tools="http://schemas.android.com/tools">
+    <style name="Base.Theme.EcoMonitor" parent="Theme.Material3.DayNight.NoActionBar">
     </style>
 </resources>
